# task_2

./: CMakeLists.txt  Makefile  calculator.cpp  calculator.h  main.cpp
